# claw-setup

./: .gitignore  index.html  lucide-sprite.generated.js  package-lock.json  package.json  setup.css  setup.js
scripts/: package-resources.js
src/: setup-bridge.js  setup-entry.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  logging.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/oauth/: mod.rs
src-tauri/src/provider/: mod.rs
src-tauri/src/proxy/: mod.rs
src-tauri/src/runtime/: mod.rs
src-tauri/src/system/: mod.rs
