[package]
name = "claw-setup"
version = "0.1.0"
description = "Standalone Tauri/Rust setup app for OneClaw"
edition = "2021"
rust-version = "1.78"

[lib]
name = "claw_setup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "claw-setup"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "6"
hex = "0.4"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
thiserror = "2"
tiny_http = "0.12"
tungstenite = "0.24"

[dev-dependencies]
serial_test = "3"
tempfile = "3"
